# dustvalve_next

./: .editorconfig  .gitignore  CLAUDE.md  README.md  TRANSLATIONS.md  build.gradle.kts  build.sh  compose_stability_config.conf  gradle.properties  local.properties  release-keystore.jks  settings.gradle.kts
.github/workflows/: baseline-profile.yml  check.yml  release.yml
app/: build.gradle.kts  lint-baseline.xml  proguard-androidtest.pro  proguard-rules.pro  proguard-test-support.pro
app/src/androidTest/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
baselineprofile/: build.gradle.kts
baselineprofile/src/main/: AndroidManifest.xml
config/detekt/: detekt-baseline.xml  detekt.yml
config/lint/: lint.xml
core/common/: build.gradle.kts
core/database/: build.gradle.kts
core/database/schemas/: README.md
core/datastore/: build.gradle.kts
core/model/: build.gradle.kts
data/: build.gradle.kts
docs/: RELEASE_CHECKLIST.md
docs/testing/: README.md  catalog-bandcamp.md  catalog-local.md  catalog-settings.md  catalog-youtube-music.md  catalog-youtube.md
domain/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
macrobenchmark/: build.gradle.kts
rust/: Cargo.toml  buildLibrespot.sh  prepare.sh
rust/librespot-ffi/: Cargo.toml
rust/librespot-ffi/src/: lib.rs
scripts/: check_ascii.sh  check_deps.py  ci_assert_tests_ran.sh  ci_surface_logcat.sh  nightly-deps-agent-prompt.md  nightly-deps-agent.sh  nightly-update.sh
shippedsmoke/: build.gradle.kts  proguard-rules.pro
(+626 files in other folders)
