[package]
name = "librespot-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
librespot = { path = "../deps/librespot", default-features = false, features = ["with-tremor"] }
jni = "0.21"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
android_logger = "0.14"
once_cell = "1"
